--- a/Source/VisualStudio.Solution/VisualStudio/VisualStudio.fsproj
+++ b/Source/VisualStudio.Solution/VisualStudio/VisualStudio.fsproj
@@ -55,6 +55,8 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Accord.fsx" />
     <Content Include="packages.config" />
+    <None Include="RandomForest.fsx" />
+    <None Include="Numl.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Accord">
@@ -83,6 +85,10 @@
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="numl">
+      <HintPath>..\packages\numl.0.8.26.0\lib\net40\numl.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RDotNet">
