--- a/Source/VisualStudio.Solution/VisualStudio/packages.config
+++ b/Source/VisualStudio.Solution/VisualStudio/packages.config
@@ -5,6 +5,7 @@
   <package id="Accord.Statistics" version="3.3.0" targetFramework="net46" />
   <package id="DynamicInterop" version="0.7.4" targetFramework="net46" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net46" />
+  <package id="numl" version="0.8.26.0" targetFramework="net46" />
   <package id="R.NET.Community" version="1.6.5" targetFramework="net46" />
   <package id="R.NET.Community.FSharp" version="1.6.5" targetFramework="net46" />
 </packages>
